# Auto-Claude

./: .auto-claude-status  .env.template  .gitattributes  .gitignore  .kilocodemodes  .mcp.json  CLAUDE.md  CODE_INTELLIGENCE_EXECUTIVE_SUMMARY_2026.md  CONTRIBUTING.md  CROSS_SESSION_BOOTSTRAP_V40.md  DEEP_DIVE_SDK_REFERENCE.md  DEFINITIVE_CODE_INTELLIGENCE_ARCHITECTURE_2026.md  Dockerfile  OPTIMIZATION_V27.md  README.md  WINDOWS_LINUX_PATH_FIX.md  beyond_rag_deep_dive.py  beyond_rag_results.json  cli.py  conftest.py  cutting_edge_iterations.py  deep_dive_batch_results.json  docker-compose.yaml  gap_resolution_results.json  iteration-state.json  iteration_loop.py  iteration_loop_results.json  llmops_emerging_patterns.py  llmops_results.json  massive_deep_dive_results.json  openapi_letta.json  production_patterns_results.json  pyproject.toml  rag_architecture_deep_dive.py  rag_architecture_results.json  sdk_execution_loop.py  test_v38_real_api.py  validation_v35_result.json
.archive/old-benchmarks/: BENCHMARK_V18.md  BENCHMARK_V19.md  BENCHMARK_V20.md  BENCHMARK_V21.md  BENCHMARK_V22.md  OPTIMIZATION_PLAN_V17.md  OPTIMIZATION_V26.md
.claude/: README.md  iteration-state.json  settings.json  settings.local.json
.claude-flow/: CAPABILITIES.md  agents.json  config.yaml
.claude-flow/security/: cve-status.json
.config/: .env.letta  .env.template  README.md  SDK_INDEX.md  SDK_OPTIMIZATION_2026.md
.flow/: STATUS.md
.serena/: project.yml
.swarm/: schema.sql
active/: ITERATION_LOOP_V14.md
archive/: ARCHITECTURE_OPTIMIZATION_V6.md  GAP_ANALYSIS_V5.md  LETTA_ULTRAMAX_V8_ULTIMATE.md  OPTIMAL_ARCHITECTURE_2026.md  ULTIMATE_ARCHITECTURE_V7.md  ULTIMATE_UNIFIED_FINAL.md  UNIFIED_WORKFLOW.md  UNLEASHED.md  letta-claude-code-comprehensive-guide.md  letta-claude-code-ultimate-guide.md  letta-complete-sdk-reference.md
audit/: CLEANUP_EXECUTION_PLAN_2026.md  COMPREHENSIVE_SYSTEM_AUDIT_2026.md  COMPREHENSIVE_TECHNICAL_AUDIT_2026-01-24.md  CURRENT_STATE_AUDIT_2026-01-22.md  EXECUTIVE_SYNTHESIS_REPORT_2026.md  FINAL_SYNTHESIS_AUDIT_2026-01-22.md  FOLDER_STRUCTURE_AUDIT_2026.md  NEXT_STEPS_AUDIT_2026-01-22.md  PHASE_13_RESULTS.md  PHASE_14_RESULTS.md  PHASE_15_RESULTS.md  PHASE_1_STATUS_2026.md  PHASE_2_STATUS_2026.md  POST_CLEANUP_AUDIT_2026.md  ROADMAP_CONSOLIDATION_2026.md  SDK_CLEANUP_GROUPS_2026.md  SDK_GRANULAR_AUDIT_2026.md  SDK_KEEP_ARCHITECTURE_2026.md  SYSTEM_AUDIT_2026_02_02.md  ULTIMATE_ARCHITECTURE_2026.md  ULTIMATE_GOAL_VS_CURRENT_2026.md  UNLEASH_PLATFORM_AUDIT_2026-01-22.md  V33_FINAL_AUDIT_PART1.md  V33_INTEGRATION_AUDIT_FINAL.md  V35_EXHAUSTIVE_FINAL_AUDIT_2026-01-25.md  V35_FINAL_AUDIT_2026-01-25.md  compass_artifact_wf-0f1ea21f-05b5-45d3-9361-2f5d2352c92c_text_markdown.md
auto-claude/: planner.py
config/: env.template  production.yaml  ralph_production.yaml
core/: __init__.py  health.py  llm_gateway.py  mcp_server.py  orchestrator.py  sdk_access.py  validator.py
docs/: AGENTIC_WORKFLOW_PATTERNS.md  AGENTS.md  AGENT_SELECTION_GUIDE.md  ARCHITECTURE_GAP_ANALYSIS_2026.md  ARCHITECTURE_IMPROVEMENTS_2026.md  BENCHMARK_V23.md  CLAUDE_CODE_CLI_ARCHITECTURE_V2.md  CODE_INTELLIGENCE_IMPLEMENTATION_ROADMAP_2026.md  COMPREHENSIVE_SDK_RESEARCH_2026.md  DEFINITIVE_SDK_REFERENCE_2026.md  EMBEDDING_MODEL_UPGRADE_2026.md  GOALS_TRACKING.md  IMPLEMENTATION_ROADMAP_2026.md  INDEX.md  INTEGRATION_ROADMAP.md  INTEGRATION_STATUS.md  LETTA_SLEEPTIME_COMPUTE_GUIDE.md  MCP_2026_MIGRATION_SUMMARY.md  MCP_QUICK_REFERENCE.md  MCP_SSE_TO_HTTP_MIGRATION.md  MEMORY_ARCHITECTURES_2026.md  MEMORY_SDK_COMPARISON_2026.md  MEMORY_SDK_DEEP_RESEARCH_2026.md  MESSAGE_BATCHES_API_RESEARCH_2026.md  PHASE_11_SDK_INSTALL_PROMPT.md  PHASE_13_E2E_TESTING_PROMPT.md  PHASE_14_CLI_VERIFICATION_PROMPT.md  PHASE_15_PRODUCTION_DEPLOYMENT_PROMPT.md  PHASE_2_CLAUDE_CODE_PROMPT.md  PHASE_6_PART2_PROMPT.md  PHASE_7_PART2_PROMPT.md  PHASE_8_CLI_PERFORMANCE_PROMPT.md  PROMPT_CACHING_GUIDE.md  PYTHON_314_SDK_COMPATIBILITY_REPORT.md  QUICK_START_GUIDE.md  RAG_ARCHITECTURES_2026.md  RAG_ARCHITECTURE_DEEP_DIVE_2026.md  RAG_ARCHITECTURE_SOTA_INTRO.md  RESEARCH_SCRIPT_MIGRATION_GUIDE.md  SDK_INTEGRATION_GUIDE.md  (+20 more)
platform/: .mcp.json  ARCHITECTURE.md  CHANGELOG.md  GOALS_TRACKING.md  MIGRATION_GUIDE.md  Makefile  README.md  RESEARCH_SYNTHESIS_2026.md  V10_ARCHITECTURE.md  V10_ARCHITECTURE_V2.md  V2_ARCHITECTURE_COMPLETE.md  V2_PLATFORM_OVERVIEW.md  conftest.py  pytest.ini  requirements.txt  validate_v2_stack.py
research/: ITERATION_SUMMARY.md  RALPH_LOOP_INTEGRATION_ARCHITECTURE.md  ralph-loop-investigation-state.json
scripts/: audit_cli_commands.py  benchmark_performance.py  deploy.py  final_validation.py  full_iteration_suite.py  gap_resolution.py  index_codebase.py  iteration_loop.py  production_patterns_loop.py  reorganize-unleash.ps1  security_audit.py  setup-ultramax.ps1  unified_research_system.py  v12_autonomous_session.py  validate_code_intelligence.py  validate_cross_session.py  validate_environment.py  validate_memory.py  validate_orchestration.py  validate_phase2.py  validate_phase3.py  validate_phase5.py  validate_phase6.py  validate_phase8.py  validate_production.py  validate_py314_compat.py  validate_tools.py  validate_v33_final.py  validate_v35_final.py  verify_live_apis.py
sdks/: INTEGRATION_GUIDE_CLAUDE_FLOW_LETTA_OPIK.md  MCP_ECOSYSTEM_DEEP_DIVE.md  SDK_TIER_CLASSIFICATION.md  ULTIMATE_SDK_ARCHITECTURE.md
tests/: test_cli_commands.py  test_cli_integration.py  test_e2e_integration.py  v14_iteration_tests.py  v33_verification_tests.py  v34_verification_tests.py  v35_verification_tests.py  v36_verification_tests.py  v37_verification_tests.py  v38_verification_tests.py  v39_verification_tests.py  v40_verification_tests.py  voyage_v39_10_real_api_test.py  voyage_v39_12_archetype_test.py  voyage_v39_12_streaming_test.py  voyage_v39_13_metrics_test.py  voyage_v39_5_streaming_test.py  voyage_v39_6_multipose_test.py  voyage_v39_7_batch_test.py  voyage_v39_8_cache_test.py  voyage_v39_9_progress_test.py  voyage_v39_adapter_test.py  voyage_v39_advanced_search_test.py  voyage_v39_cache_test.py
(+1836 files in other folders)
