[project]
name = "unleash-platform"
version = "36.0.0"
description = "Unified SDK Integration Platform - V36 Architecture with 39 SDKs across 8 Layers"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Core dependencies only - SDKs installed per phase
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Layer 0: Protocol
protocol = [
    "mcp>=0.1.0",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "litellm>=1.30.0",
    "fastmcp>=0.1.0",
    # V36 New
    "portkey-ai>=1.0.0",          # Portkey Gateway
]

# Layer 1: Orchestration
# CVE-2025-64439: langgraph>=1.0.1, langgraph-checkpoint>=3.0.0 required for RCE fix
orchestration = [
    "temporalio>=1.4.0",
    "langgraph>=1.0.1",
    "langgraph-checkpoint>=3.0.0",
    "crewai>=0.28.0",
    "pyautogen>=0.2.0",
    # V36 New
    "openai-swarm>=0.1.0",        # OpenAI Agents SDK
    "strands-agents>=0.1.0",      # AWS Strands Agents
]

# Layer 2: Memory
memory = [
    "letta>=0.3.0",
    "mem0ai>=0.0.20",
    # V36 New (replaces zep-python)
    "graphiti-core>=0.5.0",       # Graphiti (replaces Zep CE)
]

# Layers 3-4: Intelligence (Structured + Reasoning)
intelligence = [
    "instructor>=1.0.0",
    "outlines>=0.0.40",
    "pydantic-ai>=1.51.0",        # Upgraded for agent features
    "dspy-ai>=2.6.0",             # Upgraded for MIPROv2 optimizer
]

# Layer 5: Observability
observability = [
    "langfuse>=2.0.0",
    "opik>=1.0.0",
    "arize-phoenix>=3.0.0",
    "deepeval>=0.21.0",
    "ragas>=0.1.0",
    "promptfoo>=0.1.0",
    # V36 New
    "braintrust>=0.1.0",          # Braintrust evaluation
]

# Layer 6: Safety
safety = [
    "guardrails-ai>=0.4.0",
    "llm-guard>=0.3.0",
    "nemoguardrails>=0.8.0",
]

# Layers 7-8: Processing & Knowledge
processing = [
    "aider-chat>=0.30.0",
    "crawl4ai>=0.3.0",
    "graphrag>=0.3.0",
    "ribs>=0.7.0",
    # V36 New
    "ragatouille>=0.1.0",         # ColBERT late interaction
    "cognee>=0.1.0",              # Knowledge graph construction
]

# V36 Complete SDK Bundle
v36 = [
    "unleash-platform[protocol,orchestration,memory,intelligence,observability,safety,processing]",
]

# All SDKs combined (alias for v36)
all = [
    "unleash-platform[v36]",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
